<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/score"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreXTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/scoreXPrefix"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/scoreTextView"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

    <TextView
        android:id="@+id/scoreOTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/scoreOPrefix"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/scoreTextView"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

    <GridView
        android:id="@+id/scoreGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        app:layout_constraintTop_toBottomOf="@+id/scoreXTextView"
        tools:layout_editor_absoluteX="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>